<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search Action -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <!-- Filter Action -->
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom"/>

    <!-- Overflow Menu Items -->
    <item
        android:id="@+id/refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="never"/>

    <!-- Settings -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"/>

    <!-- Help -->
    <item
        android:id="@+id/help"
        android:title="@string/menu_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="never"/>

</menu>